hphp/hack/test/typecheck/array_get_tconst.php.like_types.exp
File "array_get_tconst.php", line 8, characters 12-13:
Invalid return type (Typing[4110])
File "array_get_tconst.php", line 6, characters 43-55:
Expected ~this::MyArray because it is an unenforceable type
File "array_get_tconst.php", line 4, characters 34-52:
But got array<mixed, mixed>
